<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PracticePlayer</string>
    <string name="title">&lt;unknown title></string>
    <string name="artist">&lt;unknown artist></string>
    <string name="genre"></string>
    <string name="play">&#9654;</string>
    <string name="pause">&#9612;&#9612;</string>
    <string name="repeat">&#8635;</string>
    <string name="shuffle">s</string>
    <string name="action_settings">Settings</string>
    <string name="prev"><![CDATA[<]]></string>
    <string name="next"><![CDATA[>]]></string>
    <string name="load_playlist">Load Playlist</string>
    <string name="duration_zero">00:00</string>
    <string name="percentage_zero">0%</string>
    <string name="playlist_loaded">Playlist loaded!</string>
    <string name="prefs_updated">Preferences updated!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
