<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".PlayerActivity"
    style="@style/AppTheme">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/meta_horizontal_margin"
        android:layout_marginTop="@dimen/meta_vertical_margin"
        android:layout_marginRight="@dimen/meta_horizontal_margin"
        android:layout_marginBottom="@dimen/meta_vertical_margin">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/title"
                android:id="@+id/title_lbl" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/artist"
                android:id="@+id/artist_lbl" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/genre"
                android:id="@+id/genre_lbl" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/album_img"
        android:layout_gravity="left|top" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/duration_zero"
            android:id="@+id/duration_lbl"
            android:layout_gravity="center|top"
            android:textAlignment="center"
            android:textStyle="bold"
            android:gravity="center|center_vertical|center_horizontal" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/duration_progress"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/progress_horizontal_margin"
            android:layout_marginRight="@dimen/progress_horizontal_margin" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/percentage_zero"
            android:id="@+id/percentage_lbl"
            android:layout_gravity="center|top"
            android:textAlignment="center"
            android:gravity="center|center_vertical|center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="?android:attr/dividerHorizontal"
        android:showDividers="beginning"
        android:paddingTop="16dip"
        android:layout_gravity="center_horizontal|bottom">

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:measureWithLargestChild="true">


            <LinearLayout android:id="@+id/leftSpacer1"
                android:layout_weight="0.25"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:text="@string/prev"
                android:id="@+id/prev_btn"
                android:maxLines="2"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/play_pause_btn"
                android:text="@string/play_pause"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:maxLines="2"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:text="@string/next"
                android:id="@+id/next_btn"
                android:maxLines="2"
                style="?android:attr/buttonBarButtonStyle" />

            <LinearLayout android:id="@+id/rightSpacer1"
                android:layout_width="0dip"
                android:layout_weight="0.25"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:measureWithLargestChild="true">


            <LinearLayout android:id="@+id/leftSpacer2"
                android:layout_weight="0.25"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:text="@string/load_playlist"
                android:id="@+id/load_playlist_btn"
                android:maxLines="2"
                style="?android:attr/buttonBarButtonStyle" />

            <LinearLayout android:id="@+id/rightSpacer2"
                android:layout_width="0dip"
                android:layout_weight="0.25"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>
